# NewSoftKeyboard

./: AGENTS.md  BUILDING.md  FDROID_PUBLISHING.md  README.md  RELEASE_NOTES.md  TODO.md  build.gradle  build_command.md  codecov_android.yml  codecov_bazel.yml  gradle.properties  plan.md  rebrand_plan.md  settings.gradle  settings.gradle.full  settings.gradle.minimal  setup_anysoftkeyboard_english.sh  setup_newsoftkeyboard_english.sh  suggestions-progress.md
addons/: CONTRIBUTING.md
config/: lint.xml
docs/: FDROID.md  compatibility-checklist.md  monolith-inventory.md  newsoftkeyboard-refactor-plan.md
engine-models/: build.gradle
engine-neural/: build.gradle
engine-presage/: build.gradle  consumer-rules.pro
fdroid/: .env.example
ime/dictionaries/jnidictionaryv1/: CMakeLists.txt  build.gradle
ime/dictionaries/jnidictionaryv1/src/main/java/com/anysoftkeyboard/dictionaries/jni/: BinaryDictionary.java
ime/dictionaries/jnidictionaryv1/src/main/java/wtf/uhoh/newsoftkeyboard/dictionaries/jni/: BinaryDictionary.java
ime/dictionaries/jnidictionaryv1/src/main/jni/source/: com_anysoftkeyboard_dictionaries_BinaryDictionary.cpp
ime/dictionaries/jnidictionaryv2/: CMakeLists.txt  build.gradle
ime/dictionaries/jnidictionaryv2/src/main/java/com/anysoftkeyboard/dictionaries/jni/: ResourceBinaryDictionary.java
ime/dictionaries/jnidictionaryv2/src/main/java/wtf/uhoh/newsoftkeyboard/dictionaries/jni/: ResourceBinaryDictionary.java
ime/dictionaries/jnidictionaryv2/src/main/jni/source/: com_anysoftkeyboard_dictionaries_ResourceBinaryDictionary.cpp
retraining/: kenlm  (+2 more)
(+1638 files in other folders)
